actualizacion de README.md

--- a/YemaTest/templates/DetalleCita.html
+++ b/YemaTest/templates/DetalleCita.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %} Cuenta {{ account_id }} {% endblock %}
+{% block title %} Cita {{ account_id }} {% endblock %}
 
 {% block header_scripts %}
 {% endblock %}
