--- a/YemaTest/templates/ListaPediatras.html
+++ b/YemaTest/templates/ListaPediatras.html
@@ -88,6 +88,63 @@
 
 
 
+<div class="container">
+  <h3>Agregar nuevo Pediatra</h3>
+  <form class="form-horizontal" id="myForm">
+    <div class="form-group">
+      <label for="name">Nombre del pediatra:</label>
+      <input type="text" class="form-control" id="name" placeholder="Nombre" name="name">
+    </div>
+        <div class="form-group">
+      <label for="lastname">Apellido Paterno del pediatra:</label>
+      <input type="text" class="form-control" id="lastname" placeholder="Apellido Paterno" name="lastname">
+    </div>
+    <div class="form-group">
+      <label for="mother_name">Apellido Materno del pediatra:</label>
+      <input type="text" class="form-control" id="mother_name" placeholder="Apellido Materno" name="mother_name">
+    </div>
+    <div class="form-group">
+      <label for="phone">Numero Telefonico:</label>
+      <input type="text" class="form-control" id="phone" placeholder="Numero Telefonico" name="phone">
+    </div>
+    <div class="form-group">
+      <label for="mail">Correo Electronico:</label>
+      <input type="text" class="form-control" id="mail" placeholder="Correo electronico" name="mail">
+    </div>
+
+      <button class="btn btn-success" onclick="add()">Nuevo Pediatra </button>
+  </form>
+</div>
+
+<script>
+
+function add() {
+
+    var data = JSON.stringify({
+                "name": document.forms["myForm"]["name"].value,
+                "last_name": document.forms["myForm"]["lastname"].value,
+                "mother_name": document.forms["myForm"]["mother_name"].value,
+                "phone": document.forms["myForm"]["phone"].value,
+                "mail": document.forms["myForm"]["mail"].value,
+                })
+
+    xhttp.onreadystatechange = function() {
+    if (this.readyState == 4 && this.status == 201) {
+        alert("The form was submitted");
+    }
+  };
+  xhttp.open("POST", "/api/v1/pediatras/", true);
+  xhttp.setRequestHeader("Content-Type", "application/json");
+
+  xhttp.send(data);
+
+}
+
+</script>
+
+
+
+
 {% endblock %}
 
 {% block footer %}
