--- a/YemaTest/templates/ListaConsultorios.html
+++ b/YemaTest/templates/ListaConsultorios.html
@@ -84,6 +84,45 @@
 </script>
 
 
+    <div class="container">
+  <h3>Agregar nuevo Consultorio</h3>
+  <form class="form-horizontal" id="myForm">
+    <div class="form-group">
+      <label for="name">Nombre del hospital:</label>
+      <input type="text" class="form-control" id="name" placeholder="Nombre del Hospital" name="name">
+    </div>
+        <div class="form-group">
+      <label for="lastname">Numero de Consultorio:</label>
+      <input type="text" class="form-control" id="lastname" placeholder="Numero de consultorio" name="office">
+    </div>
+      <button class="btn btn-success" onclick="add()">Nuevo Consultorio </button>
+  </form>
+</div>
+
+<script>
+
+function add() {
+
+    var data = JSON.stringify({
+                "hospital": document.forms["myForm"]["name"].value,
+                "office": document.forms["myForm"]["office"].value
+                })
+
+    xhttp.onreadystatechange = function() {
+    if (this.readyState == 4 && this.status == 201) {
+        alert("The form was submitted");
+    }
+  };
+  xhttp.open("POST", "/api/v1/consultorios/", true);
+  xhttp.setRequestHeader("Content-Type", "application/json");
+
+  xhttp.send(data);
+
+}
+
+</script>
+
+
 
 {% endblock %}
 
